Fix overflow on tablet

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 }
 
 html {
+  position: relative;
   overflow-x: hidden;
 }
 
